--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "homepage": "https://dimperesichan.github.io/goit-js-hw-10-food-service/",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
     "deploy": "gh-pages -d dist",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build -- --public-url=/goit-js-hw-10-food-service/"
   },
   "repository": {
     "type": "git",
